I have fixed the image but there are small mistake I have not covered yet

--- a/webroot/css/default.css
+++ b/webroot/css/default.css
@@ -24,3 +24,7 @@ a {
 ul {
   list-style: none;
  }
+
+ .bg-header {
+   display: none;
+ }
